--- a/app/css/main.css
+++ b/app/css/main.css
@@ -192,7 +192,7 @@ header {
     margin-bottom: 2em;
     float: right;
     display: inline;
-    border: 1px solid #ACF0F2;
+    border: 1px solid #EDEEEE;
     padding: 10px 20px 100px 20px;
     background-color: white; }
     .mainImages .imageWrap .actualImage {
@@ -211,10 +211,11 @@ header {
       .mainImages .imageWrap .poster span {
         font-size: 10pt;
         color: #FF8236; }
-    .mainImages .imageWrap .showDelete {
-      display: inline-block; }
-    .mainImages .imageWrap .hideDelete {
-      display: none; }
+    .mainImages .imageWrap .deleteBtn {
+      float: right;
+      color: #225378; }
+      .mainImages .imageWrap .deleteBtn:hover {
+        color: #FF8236; }
     .mainImages .imageWrap #databox {
       margin-top: 0;
       color: #1695A3;
