--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -19,7 +19,7 @@
         <p class="poster">
           <i class="fa fa-camera"> Posted by: </i><span>{{ owner }}</span>
         </p>
-        <div class="deleteBtn" data-id="{{id}}" id="deleteBtn">x</div>
+        <div class="deleteBtn" data-id="{{id}}" id="deleteBtn"></div>
 
         <div class="actualImage">
           <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
