--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -217,6 +217,13 @@ header {
     color: $darkblue;
   }
 
+  h3 {
+    display: inline-block;
+    float: left;
+    // margin: 0;
+    font-size: 2em;
+  }
+
   .rightBtns {
     overflow: hidden;
   }
@@ -274,10 +281,9 @@ header {
   .imageWrap {
     position: relative;
     width: 100%;
-    height: 260px;
+    height: 280px;
     overflow: hidden;
     border-radius: 4px;
-    margin-bottom: 2em;
     float: right;
     display: inline;
     border: 1px solid #EDEEEE;
@@ -291,14 +297,18 @@ header {
     }
 
     .poster {
-      display: inline;
+      display: inline-block;
       color: #1695A3;
       float: left;
-      margin-bottom: .5em;
       position: relative;
       font-family: $roboto;
       font-size: 12px;
-      letter-spacing: .1em;
+      letter-spacing: .05em;
+      padding: .3em;
+
+      i {
+        color: $darkblue;
+      }
 
         span {
           font-size: 10pt;
@@ -307,6 +317,7 @@ header {
       }
 
     .deleteBtn {
+      display: inline-block;
       float: right;
       color: $darkblue;
 
@@ -315,13 +326,14 @@ header {
       }
     }
 
-    #databox {
-      margin-top: 0;
+    .databox {
+      margin-top: 5px;
       color: #1695A3;
       font-size: 12pt;
       font-family: $roboto;
       overflow: hidden;
       width: 100%;
+      letter-spacing: .05em;
 
       p {
         margin: 0;
@@ -524,29 +536,58 @@ header {
 .sidebarWrapper {
     @include span-columns(3);
     background-color: $light;
-    // height: 130vh;
+    height: 100%;
     overflow: hidden;
     clear: both;
+
     button {
         font-family: $roboto;
         width: 100%;
         color: $light;
+        margin-top: 10em;
     }
-    .leaderboardScorePoints {
-        color: $orange;
-        font-weight: bold;
+
+    .leadertable {
+      background-color: $light;
+      border: none;
+      margin: auto;
+      width: 100%;
     }
+
+    table {
+      border: none;
+
+      th {
+        // background-color: $darkblue;
+        padding: 1em;
+        font-size: 1.3em;
+        color: $darkblue;
+        text-align: center;
+      }
+
+      td {
+        color: $darkblue;
+        text-align: center;
+        font-size: 1.1em;
+        padding: 1em;
+      }
+    }
+
+    // .leaderboardScorePoints {
+    //     color: $orange;
+    //     font-weight: bold;
+    // }
     .leaderboardh4 {
-        background-color: $orange;
         padding: 10px;
         font-size: 2.5em;
         border-radius: 3px;
-        color: $light;
+        color: $orange;
+        text-align: center;
     }
-    .leaderboard {
-        padding: 15px;
-        line-height: 2em;
-    }
+    // .leaderboard {
+    //     padding: 15px;
+    //     line-height: 2em;
+    // }
     .innerAside {
         width: 90%;
         margin: auto;
@@ -555,6 +596,10 @@ header {
         h4 {
             margin-top: 1em;
             font-family: $roboto;
+            color: $darkblue;
+        }
+        p {
+          color: $darkblue;
         }
     }
     .asideTop {
@@ -616,6 +661,7 @@ header {
             margin-bottom: 2em;
             float: left;
             display: inline;
+            border: 1px solid #EDEEEE;
             border: 1px solid #ACF0F2;
             padding: 10px 20px 100px 20px;
             background-color: white;
@@ -643,13 +689,14 @@ header {
                     color: $orange;
                 }
             }
-            .databox {
+            .databoxnew {
                 margin-top: 0;
                 color: #1695A3;
                 font-size: 12pt;
                 font-family: $roboto;
                 overflow: hidden;
                 width: 100%;
+                letter-spacing: .1em;
                 p {
                     margin-top: 1em;
                     font-size: .7em;
