--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -1,26 +1,18 @@
+<div class="innerAside">
 
-      <div class="innerAside">
-        <div class="asideTop">
-          <h4>{{username}}</h4>
-          <div class="avatar">
-          {{!--   <img src="http://placehold.it/100x100"> --}}
-              <img src="images/q_blue_orange.png">
-          </div>
-          <div class="score">
-            <p>Current score: {{points}}</p>
-          </div>
-        </div>
+  <div class="asideTop">
+    <h4>{{username}}</h4>
+{{!--     <div class="avatar">
+      <img src="images/q_blue_orange.png">
+    </div> --}}
+    <div class="score">
+      <p>Current score: {{points}}</p>
+    </div>
+  </div>
 
-      {{!--   <div class="leaderboardSection">
-          <h4>Leaderboard</h4>
-          <ul id="leaderboard" class="leaderboard">
-          {{#each user}}
-            <li>{{username}}: {{points}}</li>
+  <hr />
 
-          {{/each}}
-          </ul>
-        </div> --}}
-        </div>
+</div>
 
 
 
