Added sort options

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -1,4 +1,5 @@
 <div class="mainImages">
+
   <h2>LET'S PLAY!</h2>
   <div class="rightBtns">
     <div class="logout" id="logout">
@@ -8,6 +9,13 @@
       <i class="fa fa-camera"></i>
       <p>Add a new post</p>
     </div></a>
+  </div>
+
+  <div class="sorting">
+    <div class="circle" id="sortDifficult"></div>
+    <p class="sort">Sort by most difficult.</p>
+    <div class="circle" id="sortRecent"></div>
+    <p class="sort">Sort by most recent addition.</p>
   </div>
 
   <ul class="small-block-grid-3">
