--- a/app/css/main.css
+++ b/app/css/main.css
@@ -52,7 +52,7 @@ header {
   padding: 10px; }
   header .innerHeader {
     overflow: hidden;
-    width: 80%;
+    width: 85%;
     margin: auto; }
     header .innerHeader .logoImage {
       display: inline-block;
@@ -138,7 +138,8 @@ header {
   float: right;
   width: 100%; }
   .mainImages ul {
-    margin-right: 1em; }
+    margin-right: 1em;
+    clear: both; }
   .mainImages h2 {
     display: inline-block;
     float: left;
@@ -187,6 +188,25 @@ header {
     .mainImages .logoutBtn p {
       display: inline-block;
       margin: 0; }
+  .mainImages .sorting .sort {
+    margin-bottom: .5em; }
+  .mainImages .sorting .circle {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 1px solid #225378;
+    float: left;
+    clear: both; }
+    .mainImages .sorting .circle:hover {
+      background-color: #225378; }
+  .mainImages .sorting .sorted {
+    background-color: #225378; }
+  .mainImages .sorting p {
+    display: inline-block;
+    float: left;
+    margin-left: .6em;
+    color: #225378; }
   .mainImages .imageWrap {
     position: relative;
     width: 100%;
