--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -78,7 +78,7 @@ header {
 
   .innerHeader {
     overflow: hidden;
-    width: 80%;
+    width: 85%;
     margin: auto;
 
     .logoImage {
@@ -208,6 +208,7 @@ header {
 
   ul {
     margin-right: 1em;
+    clear: both;
   }
 
   h2 {
@@ -277,7 +278,40 @@ header {
         display: inline-block;
         margin: 0;
       }
+  }
+
+  .sorting {
+
+    .sort {
+      margin-bottom: .5em;
     }
+
+    .circle {
+      display: inline-block;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      border: 1px solid $darkblue;
+      float: left;
+      clear: both;
+
+      &:hover {
+        background-color: $darkblue;
+      }
+    }
+
+    .sorted {
+      background-color: $darkblue;
+    }
+
+    p {
+      display: inline-block;
+      float: left;
+      margin-left: .6em;
+      color: $darkblue;
+    }
+  }
+
   .imageWrap {
     position: relative;
     width: 100%;
