Added delete button to users' posts on load and sort change

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -12,9 +12,10 @@
   </div>
 
   <div class="sorting">
-    <div class="circle" id="sortDifficult"></div>
+    <div class="circle circleD" id="sortDifficult"></div>
     <p class="sort">Sort by most difficult.</p>
-    <div class="circle" id="sortRecent"></div>
+
+    <div class="circle circleR" id="sortRecent"></div>
     <p class="sort">Sort by most recent addition.</p>
   </div>
 
@@ -25,7 +26,7 @@
 
        <div class="imageWrap">
         <p class="poster">
-          <i class="fa fa-camera"><b> Posted by | </b></i><span> {{ owner }}</span>
+          <i class="fa fa-camera"><b> Posted by </b></i><span> {{ owner }}</span>
         </p>
         <div class="deleteBtn" data-id="{{id}}" id="deleteBtn"></div>
 
