--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -24,8 +24,8 @@
       <div class="errormsg" id="errorMsgGuess"></div>
 
       <div class="singleGuesses" id="singleGuesses">
-        <p id="seeOldGuesses">Show / hide your <span>incorrect</span> guesses</p>
-        <ul class="incorrectGuesses" id="incorrectGuesses">
+        <p id="seeOldGuesses">Your previous <span>incorrect</span> guesses:</p>
+        <ul class="incorrectGuesses show" id="incorrectGuesses">
         </ul>
       </div>
 
