Updated initial get from unsolved enpoint for main page sort

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -430,6 +430,8 @@ header {
     border-radius: 3px;
     color: #FF8236;
     text-align: center; }
+  .sidebarWrapper .deleteuser {
+    padding: .5em; }
   .sidebarWrapper .innerAside {
     width: 90%;
     margin: auto;
