--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -622,6 +622,11 @@ header {
     //     padding: 15px;
     //     line-height: 2em;
     // }
+
+    .deleteuser {
+      padding: .5em;
+    }
+
     .innerAside {
         width: 90%;
         margin: auto;
