--- a/app/templates/list.hbs
+++ b/app/templates/list.hbs
@@ -30,5 +30,5 @@
 </div>
 
 <div class="deleteDiv">
-  <button id="#deleteUser">Delete Account</button>
+  <button id="#deleteUser" class='deleteuser'>Delete Account</button>
 </div>
